RESOLVED FIXED50025
Web Inspector: Crash when inspecting http://alphaarnhem.nl/beta/
https://bugs.webkit.org/show_bug.cgi?id=50025
Summary Web Inspector: Crash when inspecting http://alphaarnhem.nl/beta/
Alexander Pavlov (apavlov)
Reported 2010-11-24 07:54:47 PST
Navigate to http://alphaarnhem.nl/beta/ and open Web Inspector. A crash occurs: ASSERTION FAILED: end <= styleDeclaration.length() (d:\dev\chromium-git\src\third_party\webkit\webcore\inspector\InspectorStyleSheet.h:95 WebCore::InspectorStyleProperty::setRawTextFromStyleDeclaration) Upstreaming bug http://code.google.com/p/chromium/issues/detail?id=64328
Attachments
[PATCH] Suggested fix (4.72 KB, patch)
2010-11-24 10:18 PST, Alexander Pavlov (apavlov)
pfeldman: review+
Alexander Pavlov (apavlov)
Comment 1 2010-11-24 10:18:40 PST
Created attachment 74777 [details] [PATCH] Suggested fix
Alexander Pavlov (apavlov)
Comment 2 2010-11-24 10:46:18 PST
Committing to http://svn.webkit.org/repository/webkit/trunk ... M LayoutTests/ChangeLog M LayoutTests/inspector/resources/styles-new-API-1.css M WebCore/ChangeLog M WebCore/css/CSSParser.cpp M WebCore/css/CSSParser.h Committed r72687
WebKit Review Bot
Comment 3 2010-11-24 11:24:32 PST
http://trac.webkit.org/changeset/72687 might have broken GTK Linux 32-bit Release The following tests are not passing: inspector/extensions.html
Note You need to log in before you can comment on or make changes to this bug.