2010-11-24  Alexander Pavlov  <apavlov@chromium.org>

Reviewed by Pavel Feldman.

        Web Inspector: Crash when inspecting http://alphaarnhem.nl/beta/
        https://bugs.webkit.org/show_bug.cgi?id=50025

        @font-face rules were improperly handled by source data extractor.

        WebCore:
        * css/CSSParser.cpp:
        (WebCore::CSSParser::CSSParser):
        (WebCore::CSSParser::parseDeclaration):
        (WebCore::CSSParser::createStyleRule):
        (WebCore::CSSParser::markRuleBodyStart):
        (WebCore::CSSParser::markPropertyStart):
        (WebCore::CSSParser::markPropertyEnd):
        * css/CSSParser.h:

        LayoutTests:
        * inspector/resources/styles-new-API-1.css:
        (@font-face):


Canonical link: https://commits.webkit.org/63148@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@72687 268f45cc-cd09-0410-ab3c-d52691b4dbfc